# m3l

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  compare-ast.mjs  m3l.slnx  update-version.ps1
.github/workflows/: parser-csharp.yml  parser-publish.yml  publish-crates.yml  publish-npm.yml  publish-nuget.yml  publish-wasm.yml  rust-ci.yml
bindings/csharp/: M3L.Native.csproj  M3lAstModels.cs  M3lNative.cs
bindings/typescript/: index.d.ts  index.js  package.json
crates/m3l-cabi/: Cargo.toml
crates/m3l-cabi/src/: lib.rs
crates/m3l-cli/: Cargo.toml
crates/m3l-cli/src/: main.rs  reader.rs
crates/m3l-cli/src/commands/: analyze.rs  format.rs  lint.rs  mod.rs
crates/m3l-cli/tests/: cli_integration.rs
crates/m3l-core/: Cargo.toml
crates/m3l-core/src/: catalogs.rs  ffi.rs  lexer.rs  lib.rs  parser.rs  resolver.rs  types.rs  validator.rs
crates/m3l-core/tests/: conformance.rs  extension_tests.rs  ffi_tests.rs  flow_tests.rs  types_serialization.rs
crates/m3l-lint/: Cargo.toml
crates/m3l-lint/src/: lib.rs
crates/m3l-lint/src/rules/: mod.rs  model_size.rs  naming_convention.rs  relation_complexity.rs  similar_fields.rs
crates/m3l-napi/: Cargo.toml  index.d.ts  index.js  package.json
crates/m3l-napi/npm/darwin-arm64/: package.json
crates/m3l-napi/npm/darwin-x64/: package.json
crates/m3l-napi/npm/linux-x64-gnu/: package.json
crates/m3l-napi/npm/linux-x64-musl/: package.json
crates/m3l-napi/npm/win32-x64-msvc/: package.json
crates/m3l-napi/src/: lib.rs
crates/m3l-wasm/: Cargo.toml
crates/m3l-wasm/src/: lib.rs
docs/: parser-evaluation-report.md  specification.md
docs/plans/: 2026-02-25-m3l-csharp-parser-design.md  2026-02-25-m3l-parser-cli-design.md  2026-02-25-m3l-parser-cli-plan.md
docs/proposals/: 2026-02-25-m3l-extensibility-proposal.md  2026-02-25-m3l-spec-improvements.md
parser/: README.md
parser/csharp/: M3L.slnx  README.md
parser/csharp/src/M3L/: FileReader.cs  Lexer.cs  M3L.csproj  M3LParser.cs  Parser.cs  Resolver.cs  Validator.cs
parser/csharp/tests/M3L.Tests/: DumpSamples.cs  IntegrationTests.cs  LexerTests.cs  M3L.Tests.csproj  ParserTests.cs  ResolverTests.cs  (+2 more)
parser/src/: cli.ts  index.ts  lexer.ts  parser.ts  resolver.ts  types.ts  validator.ts
parser/tests/: integration.test.ts  mdd.test.ts  resolver.test.ts  validator.test.ts
parser/typescript/: README.md  package-lock.json  package.json
parser/typescript/src/: index.ts  lexer.ts  parser.ts  reader.ts  resolver.ts  types.ts  validator.ts
parser/typescript/tests/: cli.test.ts  conformance.test.ts  dump-samples.mjs  integration.test.ts  lexer.test.ts  mdd.test.ts  parser.test.ts  reader.test.ts  resolver.test.ts  samples.test.ts  validator.test.ts
rfcs/: RFC-0001-derived-fields-and-views.md  RFC-0002-markdown-viewer-compatibility.md
samples/: 01-ecommerce.m3l.md  02-blog-cms.m3l.md  03-types-showcase.m3l.md  sample_library.m3l.md
samples/multi/: base.m3l.md  inventory.m3l.md
samples/test/analyze/: graph.m3l.md
samples/test/diff/: v1.m3l.md  v2.m3l.md
samples/test/format/: full.m3l.md
samples/test/lint/: clean.m3l.md  large-model.m3l.md  many-refs.m3l.md  naming-bad.m3l.md  similar-fields.m3l.md
samples/test/validate/: clean.m3l.md  e001-rollup-no-ref.m3l.md  e002-lookup-no-ref.m3l.md  e004-view-bad-source.m3l.md  e005-duplicate-name.m3l.md  e006-duplicate-field.m3l.md  e009-undefined-type.m3l.md  e010-relations-no-ref.m3l.md  w001-long-line.m3l.md  w002-deep-nesting.m3l.md  w003-deprecated.m3l.md  w004-long-lookup.m3l.md  w005-type-mismatch.m3l.md  w006-range-violation.m3l.md
spec/conformance/: spec.json
spec/conformance/expected/: 01-ecommerce.json  02-blog-cms.json  03-types-showcase.json  all-field-kinds.json  attribute-registry.json  backtick-expression.json  basic-model.json  computed-field.json  deep-nesting.json  duplicate-fields.json  empty-file.json  enum-standalone.json  enum-with-labels.json  framework-attrs.json  inheritance.json  interface.json  lookup-rollup.json  multi-file.json  multi-namespace.json  undefined-type.json  view-sql-block.json  view.json
spec/conformance/inputs/: 01-ecommerce.m3l.md  02-blog-cms.m3l.md  03-types-showcase.m3l.md  all-field-kinds.m3l.md  attribute-registry.m3l.md  backtick-expression.m3l.md  deep-nesting.m3l.md  duplicate-fields.m3l.md  enum-standalone.m3l.md  enum-with-labels.m3l.md  framework-attrs.m3l.md  multi-namespace.m3l.md  undefined-type.m3l.md  view-sql-block.m3l.md  view.m3l.md
(+22 files in other folders)
